data/forge_javadoc/1.11.2/raw/net/minecraft/entity/Entity.md
---
title: "Entity"
description: "public abstract class Entity extends java.lang.Object implements ICommandSender, ICapabilitySerializable<NBTTagCompound>"
package: "net/minecraft/entity"
version: "1.11.2"
forgeBuild: "13.20.0.2228"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.11.2-13.20.0.2228/net/minecraft/entity/Entity.html"
sourceType: javadoc
---

# Entity

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity

## Class signature

```java
public abstract class Entity extends java.lang.Object implements ICommandSender, ICapabilitySerializable<NBTTagCompound>
```

## Constructors

- `Entity(World worldIn)`

## Methods

- `void addEntityCrashInfo(CrashReportCategory category)`
- `protected void addPassenger(Entity passenger)`
- `boolean addTag(java.lang.String tag)`
- `void addToPlayerScore(Entity entityIn, int amount)`
- `void addTrackingPlayer(EntityPlayerMP player)`
- `void addVelocity(double x, double y, double z)`
- `protected void applyEnchantments(EntityLivingBase entityLivingBaseIn, Entity entityIn)`
- `void applyEntityCollision(Entity entityIn)`
- `void applyOrientationToEntity(Entity entityToUpdate)`
- `EnumActionResult applyPlayerInteraction(EntityPlayer player, Vec3d vec, EnumHand stack)`
- `boolean attackEntityFrom(DamageSource source, float amount)`
- `boolean canBeAttackedWithItem()`
- `boolean canBeCollidedWith()`
- `boolean canBePushed()`
- `protected boolean canBeRidden(Entity entityIn)`
- `protected boolean canFitPassenger(Entity passenger)`
- `boolean canPassengerSteer()`
- `boolean canRenderOnFire()`
- `boolean canRiderInteract()` — If a rider of this entity can interact with this entity.
- `boolean canTrample(World world, Block block, BlockPos pos, float fallDistance)` — Checks if this Entity can trample a Block .
- `protected boolean canTriggerWalking()`
- `boolean canUseCommand(int permLevel, java.lang.String commandName)`
- `Entity changeDimension(int dimensionIn)`
- `void copyLocationAndAnglesFrom(Entity entityIn)`
- `protected void createRunningParticles()`
- `protected void dealFireDamage(int amount)`
- `protected void decrementTimeUntilPortal()`
- `void deserializeNBT(NBTTagCompound nbt)`
- `void dismountRidingEntity()`
- `protected void doBlockCollisions()`
- `boolean doesEntityNotTriggerPressurePlate()`
- `EntityItem dropItem(Item itemIn, int size)`
- `EntityItem dropItemWithOffset(Item itemIn, int size, float offsetY)`
- `EntityItem entityDropItem(ItemStack stack, float offsetY)`
- `protected abstract void entityInit()`
- `boolean equals(java.lang.Object p_equals_1_)`
- `void extinguish()`
- `void fall(float distance, float damageMultiplier)`
- `EnumFacing getAdjustedHorizontalFacing()`
- `int getAir()`
- `boolean getAlwaysRenderNameTag()`
- `boolean getAlwaysRenderNameTagForRender()`
- `java.lang.Iterable<ItemStack> getArmorInventoryList()`
- `float getBrightness(float partialTicks)`
- `int getBrightnessForRender(float partialTicks)`
- `java.lang.String getCachedUniqueIdString()`
- `<T> T getCapability(Capability<T> capability, EnumFacing facing)` — Retrieves the handler for the capability requested on the specific side.
- `float getCollisionBorderSize()`
- `AxisAlignedBB getCollisionBoundingBox()`
- `AxisAlignedBB getCollisionBox(Entity entityIn)`
- `Entity getCommandSenderEntity()`
- `CommandResultStats getCommandStats()`
- `Entity getControllingPassenger()`
- `java.lang.String getCustomNameTag()`
- `EntityDataManager getDataManager()`
- `ITextComponent getDisplayName()`
- `double getDistance(double x, double y, double z)`
- `double getDistanceSq(BlockPos pos)`
- `double getDistanceSq(double x, double y, double z)`
- `double getDistanceSqToCenter(BlockPos pos)`
- `double getDistanceSqToEntity(Entity entityIn)`
- `float getDistanceToEntity(Entity entityIn)`
- `AxisAlignedBB getEntityBoundingBox()`
- `NBTTagCompound getEntityData()` — Returns a NBTTagCompound that can be used to store custom data for this entity.
- `int getEntityId()`
- `protected java.lang.String getEntityString()`
- `World getEntityWorld()`
- `java.lang.Iterable<ItemStack> getEquipmentAndArmor()`
- `float getExplosionResistance(Explosion explosionIn, World worldIn, BlockPos pos, IBlockState blockStateIn)`
- `float getEyeHeight()`
- `protected int getFireImmuneTicks()`
- `protected boolean getFlag(int flag)`
- `Vec3d getForward()`
- `java.lang.Iterable<ItemStack> getHeldEquipment()`
- `EnumFacing getHorizontalFacing()`
- `protected HoverEvent getHoverEvent()`
- `boolean getIsInvulnerable()`
- `Vec3d getLastPortalVec()`
- `Vec3d getLook(float partialTicks)`
- `Vec3d getLookVec()`
- `Entity getLowestRidingEntity()`
- `int getMaxFallHeight()`
- `int getMaxInPortalTime()`
- `float getMirroredYaw(Mirror transformMirror)`
- `double getMountedYOffset()`
- `java.lang.String getName()`
- `Entity [] getParts()`
- `java.util.List<Entity> getPassengers()`
- `java.util.UUID getPersistentID()`
- `ItemStack getPickedResult(RayTraceResult target)` — Called when a user uses the creative pick block button on this entity.
- `Vec2f getPitchYaw()`
- `int getPortalCooldown()`
- `BlockPos getPosition()`
- `Vec3d getPositionEyes(float partialTicks)`
- `Vec3d getPositionVector()`
- `EnumPushReaction getPushReaction()`
- `java.util.Collection<Entity> getRecursivePassengers()`
- `<T extends Entity> java.util.Collection<T> getRecursivePassengersByType(java.lang.Class<T> entityClass)`
- `AxisAlignedBB getRenderBoundingBox()`
- `static double getRenderDistanceWeight()`
- `Entity getRidingEntity()`
- `float getRotatedYaw(Rotation transformRotation)`
- `float getRotationYawHead()`
- `MinecraftServer getServer()`
- `SoundCategory getSoundCategory()`
- `protected SoundEvent getSplashSound()`
- `protected SoundEvent getSwimSound()`
- `java.util.Set<java.lang.String> getTags()`
- `Team getTeam()`
- `EnumFacing getTeleportDirection()`
- `java.util.UUID getUniqueID()`
- `protected Vec3d getVectorForRotation(float pitch, float yaw)`
- `double getYOffset()`
- `void handleStatusUpdate(byte id)`
- `boolean handleWaterMovement()`
- `boolean hasCapability(Capability<?> capability, EnumFacing facing)` — Determines if this object has support for the capability in question on the specific side.
- `boolean hasCustomName()`
- `int hashCode()`
- `boolean hasNoGravity()`
- `boolean hitByEntity(Entity entityIn)`
- `boolean ignoreItemEntityData()`
- `boolean isBeingRidden()`
- `boolean isBurning()`
- `boolean isCreatureType(EnumCreatureType type, boolean forSpawnCount)` — Returns true if the entity is of the @link{EnumCreatureType} provided
- `boolean isEntityAlive()`
- `boolean isEntityEqual(Entity entityIn)`
- `boolean isEntityInsideOpaqueBlock()`
- `boolean isEntityInvulnerable(DamageSource source)`
- `boolean isGlowing()`
- `boolean isImmuneToExplosions()`
- `boolean isImmuneToFire()`
- `boolean isInLava()`
- `boolean isInRangeToRender3d(double x, double y, double z)`
- `boolean isInRangeToRenderDist(double distance)`
- `boolean isInsideOfMaterial(Material materialIn)`
- `boolean isInvisible()`
- `boolean isInvisibleToPlayer(EntityPlayer player)`
- `boolean isInWater()`
- `boolean isNonBoss()`
- `boolean isOffsetPositionInLiquid(double x, double y, double z)`
- `boolean isOnSameTeam(Entity entityIn)`
- `boolean isOnScoreboardTeam(Team teamIn)`
- `boolean isOutsideBorder()`
- `boolean isPassenger(Entity entityIn)`
- `boolean isPushedByWater()`
- `boolean isRiding()`
- `boolean isRidingOrBeingRiddenBy(Entity entityIn)`
- `boolean isRidingSameEntity(Entity entityIn)`
- `boolean isSilent()`
- `boolean isSneaking()`
- `boolean isSpectatedByPlayer(EntityPlayerMP player)`
- `boolean isSprinting()`
- `boolean isWet()`
- `protected void kill()`
- `void move(MoverType type, double x, double y, double z)`
- `void moveRelative(float strafe, float forward, float friction)`
- `void moveToBlockPosAndAngles(BlockPos pos, float rotationYawIn, float rotationPitchIn)`
- `protected NBTTagList newDoubleNBTList(double... numbers)`
- `protected NBTTagList newFloatNBTList(float... numbers)`
- `void notifyDataManagerChange(DataParameter<?> key)`
- `void onCollideWithPlayer(EntityPlayer entityIn)`
- `void onEntityUpdate()`
- `void onKillCommand()`
- `void onKillEntity(EntityLivingBase entityLivingIn)`
- `void onStruckByLightning(EntityLightningBolt lightningBolt)`
- `void onUpdate()`
- `void performHurtAnimation()`
- `void playSound(SoundEvent soundIn, float volume, float pitch)`
- `protected void playStepSound(BlockPos pos, Block blockIn)`
- `protected void preparePlayerToSpawn()`
- `boolean processInitialInteract(EntityPlayer player, EnumHand hand)`
- `protected boolean pushOutOfBlocks(double x, double y, double z)`
- `RayTraceResult rayTrace(double blockReachDistance, float partialTicks)`
- `protected abstract void readEntityFromNBT(NBTTagCompound compound)`
- `void readFromNBT(NBTTagCompound compound)`
- `static void registerFixes(DataFixer fixer)`
- `protected void removePassenger(Entity passenger)`
- `void removePassengers()`
- `boolean removeTag(java.lang.String tag)`
- `void removeTrackingPlayer(EntityPlayerMP player)`
- `boolean replaceItemInInventory(int inventorySlot, ItemStack itemStackIn)`
- `void resetEntityId()` — Reset the entity ID to a new value.
- `protected void resetHeight()`
- `void resetPositionToBB()`
- `boolean sendCommandFeedback()`
- `void sendMessage(ITextComponent component)`
- `NBTTagCompound serializeNBT()`
- `void setAir(int air)`
- `void setAlwaysRenderNameTag(boolean alwaysRenderNameTag)`
- `protected void setBeenAttacked()`
- `void setCommandStat(CommandResultStats.Type type, int amount)`
- `void setCommandStats(Entity entityIn)`
- `void setCustomNameTag(java.lang.String name)`
- `void setDead()`
- `void setDropItemsWhenDead(boolean dropWhenDead)`
- `void setEntityBoundingBox(AxisAlignedBB bb)`
- `void setEntityId(int id)`
- `void setEntityInvulnerable(boolean isInvulnerable)`
- `void setFire(int seconds)`
- `protected void setFlag(int flag, boolean set)`
- `void setGlowing(boolean glowingIn)`
- `void setInvisible(boolean invisible)`
- `void setInWeb()`
- `void setItemStackToSlot(EntityEquipmentSlot slotIn, ItemStack stack)`
- `void setLocationAndAngles(double x, double y, double z, float yaw, float pitch)`
- `void setNoGravity(boolean noGravity)`
- `protected void setOnFireFromLava()`
- `void setOutsideBorder(boolean outsideBorder)`
- `void setPortal(BlockPos pos)`
- `void setPosition(double x, double y, double z)`
- `void setPositionAndRotation(double x, double y, double z, float yaw, float pitch)`
- `void setPositionAndRotationDirect(double x, double y, double z, float yaw, float pitch, int posRotationIncrements, boolean teleport)`
- `void setPositionAndUpdate(double x, double y, double z)`
- `boolean setPositionNonDirty()`
- `static void setRenderDistanceWeight(double renderDistWeight)`
- `void setRenderYawOffset(float offset)`
- `protected void setRotation(float yaw, float pitch)`
- `void setRotationYawHead(float rotation)`
- `void setSilent(boolean isSilent)`
- `protected void setSize(float width, float height)`
- `void setSneaking(boolean sneaking)`
- `void setSprinting(boolean sprinting)`
- `void setUniqueId(java.util.UUID uniqueIdIn)`
- `void setVelocity(double x, double y, double z)`
- `void setWorld(World worldIn)`
- `boolean shouldDismountInWater(Entity rider)` — If the rider should be dismounted from the entity when the entity goes under water
- `boolean shouldRenderInPass(int pass)`
- `boolean shouldRiderSit()` — Used in model rendering to determine if the entity riding this entity should be in the 'sitting' position.
- `protected boolean shouldSetPosAfterLoading()`
- `void spawnRunningParticles()`
- `boolean startRiding(Entity entityIn)`
- `boolean startRiding(Entity entityIn, boolean force)`
- `java.lang.String toString()`
- `void turn(float yaw, float pitch)`
- `protected void updateFallState(double y, boolean onGroundIn, IBlockState state, BlockPos pos)`
- `void updatePassenger(Entity passenger)`
- `void updateRidden()`
- `boolean verifyExplosion(Explosion explosionIn, World worldIn, BlockPos pos, IBlockState blockStateIn, float p_174816_5_)`
- `protected abstract void writeEntityToNBT(NBTTagCompound compound)`
- `NBTTagCompound writeToNBT(NBTTagCompound compound)`
- `boolean writeToNBTAtomically(NBTTagCompound compound)`
- `boolean writeToNBTOptional(NBTTagCompound compound)`

## Fields

- `boolean addedToChunk`
- `protected java.lang.String cachedUniqueIdString`
- `java.util.ArrayList<EntityItem> capturedDrops`
- `boolean captureDrops`
- `int chunkCoordX`
- `int chunkCoordY`
- `int chunkCoordZ`
- `protected EntityDataManager dataManager`
- `int dimension`
- `float distanceWalkedModified`
- `float distanceWalkedOnStepModified`
- `float entityCollisionReduction`
- `protected java.util.UUID entityUniqueID`
- `float fallDistance`
- `protected boolean firstUpdate`
- `protected static DataParameter<java.lang.Byte> FLAGS`
- `boolean forceSpawn`
- `protected boolean glowing`
- `float height`
- `int hurtResistantTime`
- `boolean ignoreFrustumCheck`
- `protected boolean inPortal`
- `protected boolean inWater`
- `boolean isAirBorne`
- `boolean isCollided`
- `boolean isCollidedHorizontally`
- `boolean isCollidedVertically`
- `boolean isDead`
- `protected boolean isImmuneToFire`
- `protected boolean isInWeb`
- `protected BlockPos lastPortalPos`
- `protected Vec3d lastPortalVec`
- `double lastTickPosX`
- `double lastTickPosY`
- `double lastTickPosZ`
- `double motionX`
- `double motionY`
- `double motionZ`
- `boolean noClip`
- `boolean onGround`
- `protected int portalCounter`
- `double posX`
- `double posY`
- `double posZ`
- `float prevDistanceWalkedModified`
- `boolean preventEntitySpawning`
- `double prevPosX`
- `double prevPosY`
- `double prevPosZ`
- `float prevRotationPitch`
- `float prevRotationYaw`
- `protected java.util.Random rand`
- `protected int rideCooldown`
- `float rotationPitch`
- `float rotationYaw`
- `long serverPosX`
- `long serverPosY`
- `long serverPosZ`
- `float stepHeight`
- `protected EnumFacing teleportDirection`
- `int ticksExisted`
- `int timeUntilPortal`
- `boolean velocityChanged`
- `float width`
- `World world`
